2011-12-09  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Retrieve an ID of a tweet replied by a
	tweet on a search timeline. You can display replied tweets on a
	search timeline if they have been retrieved. This is available
	only when tweets are retrieved as the JSON format.
	(twittering-json-object-to-a-status-on-search): extract the
	"in_reply_to_status_id_str" field, which Twitter begins to serve
	recently.

	* twittering-mode.el: Replace `json-read' with
	`twittering-json-read' in order to prevent abnormal exit caused by
	decoding an unknown code point. Thanks to lemit who reported the
	problem.
	(twittering-http-get-default-sentinel): use `twittering-json-read'
	instead of `json-read'.
	(twittering-json-read): new function.

2011-12-07  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Rearrange some codes for interpreting a JSON
	object.
	(twittering-json-object-to-a-status-base): rearrange codes for
	interpreting a JSON object.

	* twittering-mode.el: Fix the interpretation of JSON objects for
	direct messages. Thanks to Alexis who reported the problem.
	(twittering-http-get-default-sentinel): use
	`twittering-json-object-to-a-status-on-direct-messages' for
	timelines related to direct messages.
	(twittering-json-object-to-a-status-on-direct-messages): new
	function.

2011-11-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix the strange behavior on moving the
	cursor according to logical lines. Thanks to lemit who reported
	the problem.
	(twittering-mode-setup): bind `inhibit-field-text-motion' to
	non-nil as a buffer-local variable. If it is nil, the field
	property attached tweets interferes with the cursor motion based
	on logical lines.

	* twittering-mode.el: Store the tweet parameters, `truncated' and
	`user-protected', as boolean parameters.
	(twittering-normalize-raw-status): store the `truncated' and
	`user-protected' parameters as boolean parameters.